feat: Allow matching of participants to multiple activities.
Also:
 - Changing the TSV data now resets the application state
 - Add Message component to convey information to user
 - Pull out several components

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
 :root {
-    --green: #add396;
+    --ok: #add396;
     --gray: #ddd;
     --light-gray: #eee;
+    --bad: #ff9292;
+    --warn: rgba(255, 139, 6, 0.58);
 }
 
 * {
@@ -29,4 +31,13 @@ table tr:nth-of-type(even) {
 
 textarea {
     font-family: monospace;
+}
+
+
+.bad {
+    background-color: var(--bad);
+}
+
+.ok {
+    background-color: var(--ok);
 }
